KUBERNETES/network-policies/examples/10.allow-all-ingress-egress-external-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-namespace
  namespace: namespace2
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress

  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
