KUBERNETES/network-policies/examples/16.sample.yaml
# In this manifest:
# Selectors inside same "from" entry combine.
# LOGIC:
# Allow traffic if:
#   Source IP is in 172.17.0.0/16 (except 172.17.1.0/24)
#   OR
#   Source pod is:
#       role=frontend
#       AND
#       namespace label myspace=namespacea
#
# So frontend pods must ALSO be in namespacea.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: namespace-b

spec:
  podSelector:
    matchLabels:
      environment: test

  policyTypes:
  - Ingress

  ingress:
  - from:

    # RULE 1: Allow IP range
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24

    # RULE 2: Allow only frontend pods in namespacea
    - namespaceSelector:
        matchLabels:
          myspace: namespacea
      podSelector:
        matchLabels:
          role: frontend

# RESULT:
# Equivalent to:
# IF
#   IP match
# OR
#   (namespace match AND pod match)
# THEN allow
# More restrictive than Manifest 1.
